--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Landing Page - Start Bootstrap Theme</title>
+    <title>トウヘイ機械</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -37,13 +37,13 @@
         <div class="container topnav">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand topnav" href="#">Start Bootstrap</a>
+                <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> -->
+                <!--     <span class="sr-only">Toggle navigation</span> -->
+                <!--     <span class="icon-bar"></span> -->
+                <!--     <span class="icon-bar"></span> -->
+                <!--     <span class="icon-bar"></span> -->
+                <!-- </button> -->
+                <a class="navbar-brand topnav" href="#">トウヘイ機械</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -73,20 +73,21 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Landing Page</h1>
-                        <h3>A Template by Start Bootstrap</h3>
+                        <h1>トウヘイ機械 株式会社</h1>
+                        <!-- <h3>A Template by Start Bootstrap</h3> -->
                         <hr class="intro-divider">
-                        <ul class="list-inline intro-social-buttons">
-                            <li>
-                                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                            </li>
-                        </ul>
+			<p>丸編機用ダイヤル・シリンダーの製造販売を専門とし、自動靴下編機用各種シリンダーや特殊釜用替釜などを開発</p>
+			<!-- <ul class="list-inline intro-social-buttons"> -->
+                        <!--     <li> -->
+                        <!--         <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a> -->
+                        <!--     </li> -->
+                        <!--     <li> -->
+                        <!--         <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a> -->
+                        <!--     </li> -->
+                        <!--     <li> -->
+                        <!--         <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a> -->
+                        <!--     </li> -->
+                        <!-- </ul> -->
                     </div>
                 </div>
             </div>
@@ -99,7 +100,7 @@
 
     <!-- Page Content -->
 
-	<a  name="services"></a>
+    <a  name="services"></a>
     <div class="content-section-a">
 
         <div class="container">
@@ -107,8 +108,25 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                    <h2 class="section-heading">取扱い内容・製品</h2>
+                    <p class="lead"></p>
+		    <h4 class="section-heading">
+		      丸編機用 ダイヤル・シリンダー
+		    </h4>
+ 		    <p class="lead">
+		      高精度に鍛錬された丸編機用ダイヤル・シリンダーです。<br>
+		      素早く分解、検査、交換されますことは、欠陥のあるままの生産よりも、はるかに合理的で、能率的であるといえます。 
+		    </p>
+		    <h4 class="section-heading">
+		      自動靴下編機用 シリンダー
+		    </h4>
+ 		    <p class="lead">
+		      自動靴下編機用シリンダーは、目切工作に永年の研究を重ねた弊社技術の結晶であり、
+		      丸編機用ダイヤル・シリンダーと同様に高精度を誇ります。
+		    </p>
+		    <p class="lead">
+		      特殊仕様も承ります。
+		    </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/ipad.png" alt="">
