--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                         <h1>トウヘイ機械 株式会社</h1>
                         <!-- <h3>A Template by Start Bootstrap</h3> -->
                         <hr class="intro-divider">
-			<p>丸編機用ダイヤル・シリンダーの製造販売を専門とし、自動靴下編機用各種シリンダーや特殊釜用替釜などを開発</p>
-			<!-- <ul class="list-inline intro-social-buttons"> -->
+            			<p>丸編機用ダイヤル・シリンダーの製造販売を専門とし、自動靴下編機用各種シリンダーや特殊釜用替釜などを開発</p>
+		            	<!-- <ul class="list-inline intro-social-buttons"> -->
                         <!--     <li> -->
                         <!--         <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a> -->
                         <!--     </li> -->
@@ -102,40 +102,35 @@
 
     <a  name="services"></a>
     <div class="content-section-a">
-
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">取扱い内容・製品</h2>
-                    <p class="lead"></p>
-		    <h4 class="section-heading">
-		      丸編機用 ダイヤル・シリンダー
-		    </h4>
- 		    <p class="lead">
-		      高精度に鍛錬された丸編機用ダイヤル・シリンダーです。<br>
-		      素早く分解、検査、交換されますことは、欠陥のあるままの生産よりも、はるかに合理的で、能率的であるといえます。 
-		    </p>
-		    <h4 class="section-heading">
-		      自動靴下編機用 シリンダー
-		    </h4>
- 		    <p class="lead">
-		      自動靴下編機用シリンダーは、目切工作に永年の研究を重ねた弊社技術の結晶であり、
-		      丸編機用ダイヤル・シリンダーと同様に高精度を誇ります。
-		    </p>
-		    <p class="lead">
-		      特殊仕様も承ります。
-		    </p>
+        		    <h4 class="section-heading">
+		                丸編機用 ダイヤル・シリンダー
+		            </h4>
+ 		            <p class="lead">
+		                高精度に鍛錬された丸編機用ダイヤル・シリンダーです。<br>
+		                素早く分解、検査、交換されますことは、欠陥のあるままの生産よりも、はるかに合理的で、能率的であるといえます。 
+		            </p>
+		            <h4 class="section-heading">
+		                自動靴下編機用 シリンダー
+		            </h4>
+                    <p class="lead">
+                        自動靴下編機用シリンダーは、目切工作に永年の研究を重ねた弊社技術の結晶であり、
+                        丸編機用ダイヤル・シリンダーと同様に高精度を誇ります。
+                    </p>
+                    <p class="lead">
+                        特殊仕様も承ります。
+                    </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/ipad.png" alt="">
                 </div>
             </div>
-
         </div>
         <!-- /.container -->
-
     </div>
     <!-- /.content-section-a -->
 
@@ -143,17 +138,74 @@
 
         <div class="container">
 
-            <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
-                </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
-                </div>
+            <h2 class="section-heading">主要設備</h2>
+
+            <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
+                <h3 class="section-heading">
+                    東芝 NC ターニングセンター<br>TXN-13
+                </h3>
+                <ul class="lead">
+                    <li/>最大外周加工径：1350mm
+                    <li/>最大切削高さ：1250mm
+                </ul>
+                <p class="lead">
+                    穴グリ、ドリル、タップ加工も可能
+                </p>
             </div>
+            <div class="col-lg-5 col-sm-pull-6 col-sm-6">
+                <img class="img-responsive" src="img/NCTXN-13.jpg" alt="">
+            </div>
+
+            <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
+       		    <h3 class="section-heading">
+	                東芝 NC ターニングセンター<br>TUD-13
+	            </h3>
+	            <ul class="lead">
+                    <li/>最大切削径：1600mm
+                    <li/>最大切削高さ：1100mm
+                </ul>
+            </div>
+            <div class="col-lg-5 col-sm-pull-6 col-sm-6">
+                <img class="img-responsive" src="img/NCTUD-13.jpg" alt="">
+            </div>
+            
+            <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
+       		    <h3 class="section-heading">
+	                大日金属 汎用 NC 旋盤<br>DL65
+	            </h3>
+            </div>
+            <div class="col-lg-5 col-sm-pull-6 col-sm-6">
+                <img class="img-responsive" src="img/NCDL65.jpg" alt="">
+            </div>
+
+            <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
+       		    <h3 class="section-heading">
+	                市川製作所 縦軸ロータリー 平面、内面、外面、研削盤<br>ICB-1150-SG1
+	            </h3>
+	            <ul class="lead">
+                    <li/>外面研削範囲：90-1040mm
+                    <li/>内面研削範囲：70-850mm
+                    <li/>外面研削：0-400mm
+                    <li/>内面研削：0-200mm
+                    <li/>平面研削：0-400mm
+                </ul>
+            </div>
+            <div class="col-lg-5 col-sm-pull-6 col-sm-6">
+                <img class="img-responsive" src="img/ICB-1150-SG1.jpg" alt="">
+            </div>
+
+            <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
+       		    <h3 class="section-heading">
+	                その他
+	            </h3>
+                <p class="lead">
+                    NC旋盤、平面研削盤、円筒研削盤、フライス盤、内径研削盤、液体ホーニング機
+                </p>
+                <p class="lead">
+                    多種、多様の加工に対応できます。
+                </p>
+            </div>
+
 
         </div>
         <!-- /.container -->
@@ -190,19 +242,16 @@
 
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>Connect to Start Bootstrap:</h2>
+                    <h2>会社情報</h2>
                 </div>
                 <div class="col-lg-6">
-                    <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                        </li>
+                    <ul>
+                        <li>社名：トウヘイ機械株式会社 
+                        <li>創業：1953 年 (昭和 28 年 1 月) 
+                        <li>本社：右記参照 
+                        <li>代表取締役社長：平井 圭一 
+                        <li>資本金： 1,800 万円 (昭和 57 年より) 
+                        <li>従業員数： 5 名
                     </ul>
                 </div>
             </div>
