--- a/index.html
+++ b/index.html
@@ -101,22 +101,23 @@
     <!-- Page Content -->
 
     <a  name="services"></a>
+
+    <div class="container">
+        <div align="center">
+            <h2 class="section-heading">取扱い内容・製品</h2>
+        </div>
+    </div>
+
     <div class="content-section-a">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">取扱い内容・製品</h2>
-        		    <h4 class="section-heading">
-		                丸編機用 ダイヤル・シリンダー
-		            </h4>
+        		    <h4 class="section-heading">丸編機用 ダイヤル・シリンダー</h4>
  		            <p class="lead">
 		                高精度に鍛錬された丸編機用ダイヤル・シリンダーです。<br>
 		                素早く分解、検査、交換されますことは、欠陥のあるままの生産よりも、はるかに合理的で、能率的であるといえます。 
 		            </p>
-		            <h4 class="section-heading">
-		                自動靴下編機用 シリンダー
-		            </h4>
+		            <h4 class="section-heading">自動靴下編機用 シリンダー</h4>
                     <p class="lead">
                         自動靴下編機用シリンダーは、目切工作に永年の研究を重ねた弊社技術の結晶であり、
                         丸編機用ダイヤル・シリンダーと同様に高精度を誇ります。
@@ -130,20 +131,22 @@
                 </div>
             </div>
         </div>
-        <!-- /.container -->
     </div>
-    <!-- /.content-section-a -->
 
-    <div class="content-section-b">
 
-        <div class="container">
+<a  name="equipment"></a>
 
+    <div class="container">
+        <div align=center>
             <h2 class="section-heading">主要設備</h2>
+        </div>
+    </div>
 
+
+    <div class="content-section-a">
+        <div class="container">
             <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
-                <h3 class="section-heading">
-                    東芝 NC ターニングセンター<br>TXN-13
-                </h3>
+                <h3 class="section-heading">東芝 NC ターニングセンター<br>TXN-13</h3>
                 <ul class="lead">
                     <li/>最大外周加工径：1350mm
                     <li/>最大切削高さ：1250mm
@@ -155,11 +158,13 @@
             <div class="col-lg-5 col-sm-pull-6 col-sm-6">
                 <img class="img-responsive" src="img/NCTXN-13.jpg" alt="">
             </div>
+        </div>
+    </div>
 
+    <div class="content-section-b">
+        <div class="container">
             <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
-       		    <h3 class="section-heading">
-	                東芝 NC ターニングセンター<br>TUD-13
-	            </h3>
+       		    <h3 class="section-heading">東芝 NC ターニングセンター<br>TUD-13</h3>
 	            <ul class="lead">
                     <li/>最大切削径：1600mm
                     <li/>最大切削高さ：1100mm
@@ -168,20 +173,24 @@
             <div class="col-lg-5 col-sm-pull-6 col-sm-6">
                 <img class="img-responsive" src="img/NCTUD-13.jpg" alt="">
             </div>
+        </div>
+    </div>
             
+    <div class="content-section-a">
+        <div class="container">
             <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
-       		    <h3 class="section-heading">
-	                大日金属 汎用 NC 旋盤<br>DL65
-	            </h3>
+       		    <h3 class="section-heading">大日金属 汎用 NC 旋盤<br>DL65</h3>
             </div>
             <div class="col-lg-5 col-sm-pull-6 col-sm-6">
                 <img class="img-responsive" src="img/NCDL65.jpg" alt="">
             </div>
+        </div>
+    </div>
 
+    <div class="content-section-b">
+        <div class="container">
             <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
-       		    <h3 class="section-heading">
-	                市川製作所 縦軸ロータリー 平面、内面、外面、研削盤<br>ICB-1150-SG1
-	            </h3>
+       		    <h3 class="section-heading">市川製作所 縦軸ロータリー 平面、内面、外面、研削盤<br>ICB-1150-SG1</h3>
 	            <ul class="lead">
                     <li/>外面研削範囲：90-1040mm
                     <li/>内面研削範囲：70-850mm
@@ -193,11 +202,13 @@
             <div class="col-lg-5 col-sm-pull-6 col-sm-6">
                 <img class="img-responsive" src="img/ICB-1150-SG1.jpg" alt="">
             </div>
+        </div>
+    </div>
 
-            <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
-       		    <h3 class="section-heading">
-	                その他
-	            </h3>
+    <div class="content-section-a">
+        <div class="container">
+            <div class="col-lg-6">
+       		    <h3 class="section-heading">その他</h3>
                 <p class="lead">
                     NC旋盤、平面研削盤、円筒研削盤、フライス盤、内径研削盤、液体ホーニング機
                 </p>
@@ -205,18 +216,13 @@
                     多種、多様の加工に対応できます。
                 </p>
             </div>
-
-
         </div>
-        <!-- /.container -->
-
     </div>
-    <!-- /.content-section-b -->
 
-    <div class="content-section-a">
 
+
+    <!--<div class="content-section-a">
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
@@ -228,39 +234,45 @@
                     <img class="img-responsive" src="img/phones.png" alt="">
                 </div>
             </div>
-
         </div>
-        <!-- /.container -->
+    </div>-->
 
+
+<a  name="contact"></a>
+
+    <div class="container">
+        <div align=center>
+            <h2 class="section-heading">お問合せ・連絡先</h2>
+        </div>
     </div>
-    <!-- /.content-section-a -->
 
-	<a  name="contact"></a>
     <div class="banner">
-
         <div class="container">
-
             <div class="row">
-                <div class="col-lg-6">
-                    <h2>会社情報</h2>
-                </div>
-                <div class="col-lg-6">
-                    <ul>
-                        <li>社名：トウヘイ機械株式会社 
-                        <li>創業：1953 年 (昭和 28 年 1 月) 
-                        <li>本社：右記参照 
-                        <li>代表取締役社長：平井 圭一 
-                        <li>資本金： 1,800 万円 (昭和 57 年より) 
-                        <li>従業員数： 5 名
-                    </ul>
-                </div>
+                <p>
+                    <div class="col-lg-6">
+                        <ul>
+                            <li/>TEL: 0729-77-7702 
+                            <li/>FAX: 0729-76-1215 
+                            <li/>E-Mail: <a href="mailto:touheicojp@gmail.com">touheicojp@gmail.com</a>
+                        </ul>
+                    </div>
+                </p>
+                <p>
+                    <div class="col-lg-6">
+                        <ul>
+                            <li>社名：トウヘイ機械株式会社 
+                            <li>創業：1953 年 (昭和 28 年 1 月) 
+                            <li>本社：<a href="http://maps.google.co.jp/maps?f=q&amp;hl=en&amp;geocode=&amp;time=&amp;date=&amp;ttype=&amp;q=%E5%A4%A7%E9%98%AA%E5%BA%9C%E6%9F%8F%E5%8E%9F%E5%B8%82%E5%86%86%E6%98%8E%E7%94%BA1000-121&amp;ie=UTF8&amp;ll=34.554073,135.624847&amp;spn=0.824512,1.079407&amp;=10&mp;iwloc=addr&amp;om=1">582-0027 大阪府柏原市円明町 1000-121</a>
+                            <li>代表取締役社長：平井 圭一 
+                            <li>資本金： 1,800 万円 (昭和 57 年より) 
+                            <li>従業員数： 5 名
+                        </ul>
+                    </div>
+                </p>
             </div>
-
         </div>
-        <!-- /.container -->
-
     </div>
-    <!-- /.banner -->
 
     <!-- Footer -->
     <footer>
@@ -277,7 +289,7 @@
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#services">Services</a>
+                            <a href="#equipment">Equipment</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
