--- a/index.html
+++ b/index.html
@@ -35,71 +35,45 @@
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
         <div class="container topnav">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> -->
-                <!--     <span class="sr-only">Toggle navigation</span> -->
-                <!--     <span class="icon-bar"></span> -->
-                <!--     <span class="icon-bar"></span> -->
-                <!--     <span class="icon-bar"></span> -->
-                <!-- </button> -->
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> 
+                    <span class="sr-only">Toggle navigation</span> 
+                    <span class="icon-bar"></span> 
+                    <span class="icon-bar"></span> 
+                    <span class="icon-bar"></span> 
+                </button> 
                 <a class="navbar-brand topnav" href="#">トウヘイ機械</a>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#about">About</a>
-                    </li>
-                    <li>
-                        <a href="#services">Services</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contact</a>
-                    </li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
     </nav>
 
 
     <!-- Header -->
     <a name="about"></a>
+
     <div class="intro-header">
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>トウヘイ機械 株式会社</h1>
-                        <!-- <h3>A Template by Start Bootstrap</h3> -->
                         <hr class="intro-divider">
             			<p>丸編機用ダイヤル・シリンダーの製造販売を専門とし、自動靴下編機用各種シリンダーや特殊釜用替釜などを開発</p>
-		            	<!-- <ul class="list-inline intro-social-buttons"> -->
-                        <!--     <li> -->
-                        <!--         <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a> -->
-                        <!--     </li> -->
-                        <!--     <li> -->
-                        <!--         <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a> -->
-                        <!--     </li> -->
-                        <!--     <li> -->
-                        <!--         <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a> -->
-                        <!--     </li> -->
-                        <!-- </ul> -->
                     </div>
                 </div>
             </div>
-
         </div>
-        <!-- /.container -->
-
     </div>
-    <!-- /.intro-header -->
+
 
     <!-- Page Content -->
-
     <a  name="services"></a>
 
     <div class="container">
@@ -207,7 +181,7 @@
 
     <div class="content-section-a">
         <div class="container">
-            <div class="col-lg-6">
+            <div class="col-lg-12">
        		    <h3 class="section-heading">その他</h3>
                 <p class="lead">
                     NC旋盤、平面研削盤、円筒研削盤、フライス盤、内径研削盤、液体ホーニング機
